added temp files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@ codes/generate_textual_knowledge_DrD.ipynb
 codes/node_context_extraction_using_neo4j.ipynb
 codes/logs
 codes/pid_info.sh
+test.py
+test1.py
+test2.py
+test3.py
+test4.py
+testt.py
+
